# simple-exchange

./: CMakeLists.txt  README.MD
include/: common.hpp
include/types/: allTypes.hpp  commonTypes.hpp  currencyTypes.hpp  orderTypes.hpp  requestTypes.hpp
simple-exchange-client/: CMakeLists.txt
simple-exchange-client/src/: main.cpp
simple-exchange-client/src/Client/: Client.cpp  Client.hpp
simple-exchange-client/src/ProcessMenu/: ProcessMenu.cpp  ProcessMenu.hpp
simple-exchange-core/: CMakeLists.txt
simple-exchange-core/includes/simple-exchange-core/Core/: Core.hpp
simple-exchange-core/includes/simple-exchange-core/Deal/: Deal.hpp
simple-exchange-core/includes/simple-exchange-core/Order/: Order.hpp
simple-exchange-core/includes/simple-exchange-core/User/: User.hpp
simple-exchange-core/includes/simple-exchange-core/Utils/: CurrencyUtil.hpp
simple-exchange-core/src/simple-exchange-core/Core/: Core.cpp
simple-exchange-core/src/simple-exchange-core/Order/: Order.cpp
simple-exchange-core/src/simple-exchange-core/User/: User.cpp
simple-exchange-core/src/simple-exchange-core/Utils/: CurrencyUtil.cpp
simple-exchange-server/: CMakeLists.txt
simple-exchange-server/src/: main.cpp
simple-exchange-server/src/Server/: Server.cpp  Server.hpp
simple-exchange-server/src/Session/: Session.cpp  Session.hpp
tests/: CMakeLists.txt
tests/src/: MatchTests.cpp  UsersTests.cpp  main.cpp
